--- a/.github/workflows/update-holidays.yml
+++ b/.github/workflows/update-holidays.yml
@@ -2,7 +2,7 @@ name: Update Korean Holidays
 
 on:
   schedule:
-    - cron: '0 0 1 * *'  # Every 1st day of month at 00:00 UTC
+    - cron: '0 0 * * *'  # Every day at 00:00 UTC
   workflow_dispatch:  # Manual trigger
 
 jobs:
