--- a/.github/workflows/update-holidays.yml
+++ b/.github/workflows/update-holidays.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 0 * * *'  # Every day at 00:00 UTC
   workflow_dispatch:  # Manual trigger
 
+permissions:
+  contents: write
+
 jobs:
   update-holidays:
     runs-on: ubuntu-latest
