--- a/.github/workflows/update-holidays.yml
+++ b/.github/workflows/update-holidays.yml
@@ -74,7 +74,7 @@ jobs:
                   return None
 
           current_year = datetime.now().year
-          years_to_fetch = [current_year, current_year + 1]
+          years_to_fetch = list(range(current_year, current_year + 6))
 
           os.makedirs('holidays', exist_ok=True)
 
